fix(commercial): add contacts route and correct customer details page api call
